--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 .env
 /models
 data
-backend/util/cryptography_util/passphrase.txt
+api/logs
+backend/logs
 
 # Created by https://www.toptal.com/developers/gitignore/api/macos
 # Edit at https://www.toptal.com/developers/gitignore?templates=macos
