add and use DOCKER_REGISTRY env variable

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
+DOCKER_REGISTRY="192.168.1.xx:5001"
+
 # Generate a unique base64-encoded AES key using `openssl rand -base64 32`
 AES_256_KEY="your-base64-encoded-key-here"
 
