--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,9 @@ DOCKER_REGISTRY="192.168.1.xx:5001"
 # Generate a unique base64-encoded AES key using `openssl rand -base64 32`
 AES_256_KEY="your-base64-encoded-key-here"
 
+# Use `openssl rand -base64 32` to generate a unique one (refer https://next-auth.js.org/deployment#vercel)
+NEXTAUTH_SECRET="your-base64-encoded-key-here"
+
 # SSL Paths
 SSL_KEY_PATH=./nginx/localhost.key
 SSL_CERT_PATH=./nginx/localhost.crt
@@ -14,17 +17,14 @@ OPENAI_API_KEY=sk-...
 GMAIL_OAUTH_ENABLED=true
 GOOGLE_CLIENT_ID=4...apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=A...0
+LOGIN_SUCCESS_REDIRECT_URL=${NEXTAUTH_URL}/setup/google
+
+# Google Analytics & Tag Manager
 GA_MEASUREMENT_ID=...
 GA_TAG_MANAGER_ID=...
 
-# Use `openssl rand -base64 32` to generate a unique one (refer https://next-auth.js.org/deployment#vercel)
-NEXTAUTH_SECRET="your-base64-encoded-key-here"
-
 # URLs
 NEXTAUTH_URL="https://localhost"
-LOGIN_SUCCESS_REDIRECT_URL=${NEXTAUTH_URL}/setup/google
-
-
 
 # MongoDB
 # URI format -> "mongodb://<username>:<password>@<address>:<port>"
@@ -36,8 +36,6 @@ MONGODB_PASSWORD="example"
 MONGODB_URI="mongodb://${MONGODB_USERNAME}:${MONGODB_PASSWORD}@${MONGODB_ADDRESS}:${MONGODB_PORT}"
 
 MONGODB_DATABASE_NAME="zenbox"
-
-
 
 BACKEND_API_URL="http://api:8000"
 
