add LLM_CHOICE env variable

--- a/.env.example
+++ b/.env.example
@@ -10,7 +10,9 @@ NEXTAUTH_SECRET="your-base64-encoded-key-here"
 SSL_KEY_PATH=./nginx/localhost.key
 SSL_CERT_PATH=./nginx/localhost.crt
 
-# OpenAI
+# "local" or "chat_gpt"
+LLM_CHOICE="local"
+# needed if LLM_CHOICE is "chat_gpt"
 OPENAI_API_KEY=sk-...
 
 # Google OAuth
