remove localhost cert and key from the repository
instead we plan to generate them in start script

--- a/.env.example
+++ b/.env.example
@@ -7,8 +7,8 @@ AES_256_KEY="your-base64-encoded-key-here"
 NEXTAUTH_SECRET="your-base64-encoded-key-here"
 
 # SSL Paths
-SSL_KEY_PATH=./nginx/localhost.key
-SSL_CERT_PATH=./nginx/localhost.crt
+SSL_KEY_PATH=./localhost.key
+SSL_CERT_PATH=./localhost.crt
 
 # "local" or "chat_gpt"
 LLM_CHOICE="local"
