--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,7 +51,7 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+      - ./nginx.conf:/etc/nginx/nginx.conf
       - ${SSL_CERT_PATH}:/etc/nginx/ssl/my_ssl_cert.crt
       - ${SSL_KEY_PATH}:/etc/nginx/ssl/my_ssl_key.key
     depends_on:
