reorganize .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,22 +1,39 @@
+# Docker Registry
 DOCKER_REGISTRY="192.168.1.xx:5001"
 
-# Generate a unique base64-encoded AES key using `openssl rand -base64 32`
-AES_256_KEY="your-base64-encoded-key-here"
+# Language Model Choice
+# Options: "local" or "chat_gpt"
+LLM_CHOICE="local"
 
-# Use `openssl rand -base64 32` to generate a unique one (refer https://next-auth.js.org/deployment#vercel)
-NEXTAUTH_SECRET="your-base64-encoded-key-here"
+# OpenAI API Key (needed if LLM_CHOICE is "chat_gpt")
+OPENAI_API_KEY=sk-...
 
-# SSL Paths
+# URLs
+NEXTAUTH_URL="https://localhost"
+BACKEND_API_URL="http://api:8000"
+
+# MongoDB Settings
+MONGODB_USERNAME="zenbox_mongo_user"
+MONGODB_PASSWORD="example"
+MONGODB_ADDRESS=mongo
+MONGODB_PORT=27017
+# Constructed URI (no need to modify)
+MONGODB_URI="mongodb://${MONGODB_USERNAME}:${MONGODB_PASSWORD}@${MONGODB_ADDRESS}:${MONGODB_PORT}"
+MONGODB_DATABASE_NAME="zenbox"
+
+# Security Keys and Certificates
+# SSL Certificate Paths
 SSL_KEY_PATH=./localhost.key
 SSL_CERT_PATH=./localhost.crt
 
-# "local" or "chat_gpt"
-LLM_CHOICE="local"
-# needed if LLM_CHOICE is "chat_gpt"
-OPENAI_API_KEY=sk-...
+# AES 256 Key for encryption (generate with `openssl rand -base64 32`)
+AES_256_KEY="your-base64-encoded-key-here"
 
-# Google OAuth
-GMAIL_OAUTH_ENABLED=true
+# NEXTAUTH Secret for session management (generate with `openssl rand -base64 32`)
+NEXTAUTH_SECRET="your-base64-encoded-key-here"
+
+# Google OAuth Configuration
+GMAIL_OAUTH_ENABLED=false
 GOOGLE_CLIENT_ID=4...apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=A...0
 LOGIN_SUCCESS_REDIRECT_URL=${NEXTAUTH_URL}/setup/google
@@ -25,20 +42,6 @@ LOGIN_SUCCESS_REDIRECT_URL=${NEXTAUTH_URL}/setup/google
 GA_MEASUREMENT_ID=...
 GA_TAG_MANAGER_ID=...
 
-# URLs
-NEXTAUTH_URL="https://localhost"
-
-# MongoDB
-# URI format -> "mongodb://<username>:<password>@<address>:<port>"
-MONGODB_ADDRESS=mongo
-
-MONGODB_PORT=27017
-MONGODB_USERNAME="root"
-MONGODB_PASSWORD="example"
-MONGODB_URI="mongodb://${MONGODB_USERNAME}:${MONGODB_PASSWORD}@${MONGODB_ADDRESS}:${MONGODB_PORT}"
-
-MONGODB_DATABASE_NAME="zenbox"
-
-BACKEND_API_URL="http://api:8000"
-
-# Refer: https://docs.docker.com/compose/environment-variables/env-file/#interpolation for interpolation (i.e. using one env variable in another's definition)
+# Note:
+# - For enabling Google OAuth, you will need to set up a OAuth screen using GCP and then set the relevant environment variables.
+# - Refer: https://docs.docker.com/compose/environment-variables/env-file/#interpolation for using one env variable in another's definition.
