--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   llamacpp:
     image: joshxt/local-llm:cpu-f99ed54d76d3752a2af75979dd06f3ef52247a6d
-    restart: unless-stopped
+    restart: on-failure:5
     volumes:
       - ./models:/app/models
 
@@ -18,6 +18,7 @@ services:
 
   backend:
     image: ${DOCKER_REGISTRY}/zenbox-backend
+    restart: on-failure:5
     depends_on:
       - mongo
       - llamacpp
@@ -27,7 +28,8 @@ services:
       - ./logs/backend:/app/logs
 
   api:
-    image: ${DOCKER_REGISTRY}/zenbox-backend-api
+    image: ${DOCKER_REGISTRY}/zenbox-api
+    restart: on-failure:5
     depends_on:
       - mongo
     env_file:
@@ -37,6 +39,7 @@ services:
 
   nextjs-app:
     image: ${DOCKER_REGISTRY}/zenbox-nextjs-app
+    restart: on-failure:5
     depends_on:
       - mongo
     env_file:
